--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^6.0.1",
+    "@supabase/supabase-js": "^2.47.5",
     "hr_management_system_api": "file:",
+    "postgres": "^3.4.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -43,6 +47,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^9.1.7",
     "jest": "^29.5.0",
+    "jsdoc": "^4.0.4",
     "lint-staged": "^15.2.11",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
