--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.0.1",
     "@supabase/supabase-js": "^2.47.5",
+    "@types/bcrypt": "^5.0.2",
     "hr_management_system_api": "file:",
     "postgres": "^3.4.5",
     "reflect-metadata": "^0.2.0",
