--- a/package.json
+++ b/package.json
@@ -25,13 +25,19 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "@prisma/client": "^6.0.1",
     "@supabase/supabase-js": "^2.47.5",
     "@types/bcrypt": "^5.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "hr_management_system_api": "file:",
+    "mysql": "^2.18.1",
+    "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -39,7 +45,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.17.10",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
